[fix] - débordement de la version mobile

--- a/client/src/styles/HomeOurSelection.module.css
+++ b/client/src/styles/HomeOurSelection.module.css
@@ -25,10 +25,10 @@
 
   div {
     display: grid;
-    grid-template-columns: 11rem 11rem;
-    grid-template-rows: 11rem 11rem;
-    gap: 1rem;
-    padding: 0 1rem 1rem 1rem;
+    grid-template-columns: 10.5rem 10.5rem;
+    grid-template-rows: 10.5rem 10.5rem;
+    gap: 0.75rem;
+    padding: 0 0.75rem 0.75rem 0.75rem;
 
     figure {
       width: 100%;
